--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>twilio</artifactId>
 			<version>7.41.2</version>
 		</dependency>
+		<dependency>
+                         <groupId>org.sonarsource.scanner.maven</groupId>
+                         <artifactId>sonar-maven-plugin</artifactId>
+                         <version>3.7.0.1746</version>
+                </dependency>
 	</dependencies>
 	
 	<distributionManagement>
