--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
                          <artifactId>maven-surefire-plugin</artifactId>
                          <version>2.22.2</version>
                 </dependency>
+		<dependency>
+                          <groupId>org.codehaus.mojo</groupId>
+                          <artifactId>sonar-maven-plugin</artifactId>
+                          <version>3.7.0.1746</version>
+                          <type>pom</type>
+                 </dependency>
+
 	</dependencies>
 	
 	<distributionManagement>
