--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
 
 	<properties>
-
+		<sonar.host.url>http://18.188.151.168:9000</sonar.host.url>
 		<java.version>1.8</java.version>
 
 	</properties>
