--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
 			<scope>test</scope>
 
 		</dependency>
+		<dependency>
+                          <groupId>org.apache.maven.plugins</groupId>
+                          <artifactId>maven-surefire-plugin</artifactId>
+                          <version>2.21.0</version>
+                </dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
 
