--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9090
-server.servlet.context-path=/parking
-server.servlet.application-display-name=/parking
+server.servlet.context-path=/ingdb
+server.servlet.application-display-name=/ingdb
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -16,7 +16,7 @@ spring.datasource.username= inguser1
 spring.datasource.password= H@ckath0n
 
 
-sonar.host.url=http://http://99.79.53.116:9000
+sonar.host.url=http://http://35.182.160.84/:9000
 
 #spring.mail.host = smtp.gmail.com
 #spring.mail.username =kkrpcs@gmail.com
