--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9090
+server.port=9091
 server.servlet.context-path=/ingdb
 server.servlet.application-display-name=/ingdb
 
@@ -11,12 +11,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 #spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://http://99.79.53.116:3306/ingdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://http://99.79.65.178:3306/ingdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= inguser1
 spring.datasource.password= H@ckath0n
 
 
-sonar.host.url=http://http://35.182.160.84/:9000
+sonar.host.url=http://http://99.79.65.178:9000
 
 #spring.mail.host = smtp.gmail.com
 #spring.mail.username =kkrpcs@gmail.com
