--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.username= inguser1
 spring.datasource.password= H@ckath0n
 
 
-sonar.host.url=http://http://99.79.65.178:9000
+sonar.host.url=http://99.79.65.178:9000
 
 #spring.mail.host = smtp.gmail.com
 #spring.mail.username =kkrpcs@gmail.com
